# ConfigGUI

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  ADVANCED_CLEANUP.sh  ADVANCED_CLEANUP_REPORT.md  ARCHITECTURE.md  BEFORE_AFTER_COMPARISON.md  BUG_FIXES_AND_SOLUTIONS.md  BUILD.md  BUILD_AND_TEST_GUIDE.md  CLEANUP_DOCUMENTATION_INDEX.md  CLEANUP_SUMMARY.md  CMakeLists.txt  COLLISION_QUICK_REF.md  COMPLETE_ORGANIZATION_SUMMARY.md  CONFIGRULES_FIX.md  CONFIGRULES_SESSION_SUMMARY.md  CONTINUATION_STATUS.md  DATATYPE_FIX_COMPLETION_REPORT.md  DATATYPE_VALIDATION_RULE_FIX_SUMMARY.md  DEBUGGING_AUTORUN_SAVE.md  DESIGN_DOCUMENT.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_QUICK_REFERENCE.md  Dockerfile.html  ENHANCEMENT_SUMMARY.md  ENUM_WIDGET_FIX_VISUAL.md  EXECUTIVE_SUMMARY.md  FILE_DIALOG_HANG_FIX.md  FINAL_PUSH_REPORT.md  FINAL_STATUS_REPORT.md  FINAL_STATUS_SESSION_3.md  FIX_COLLISION_COMPLETED.md  FORM_GENERATION_FIX.md  FORM_GENERATION_FIX_REPORT.md  GITHUB_PUSH_COMPLETE.md  GIT_PUSH_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  (+69 more)
.github/: collaboration-context.md  copilot-instructions.md
.specify/memory/: constitution.md
docs/: API_REFERENCE.md  AUTORUN_ANALYSIS.md  BUG_FIXES_AND_SOLUTIONS.md  CLEANUP_COMPLETE.md  CODE_CHANGES_DETAILED.md  COMPLETE_REORGANIZATION_SUMMARY.md  COMPLETION_SUMMARY.md  DEPLOYMENT.md  DESIGN.md  DOCUMENTATION_INDEX.md  FILE_INVENTORY.md  GETTING_STARTED.md  INDEX.md  INSTALLATION_AND_USAGE_GUIDE.md  MERMAID_DIAGRAMS_UPDATE.md  ORGANIZATION_GUIDE.md  PERFORMANCE_ANALYSIS.md  PHASE_2_TASK_BREAKDOWN_SUMMARY.md  PLANNING_HTML_FORM_GENERATION_COMPLETE.md  QUICK_DEBUG.md  QUICK_REFERENCE.md  README.md  README_BUILD.md  RELEASE_NOTES.md  SAVE_ORDER_COMPLETE.md  SESSION_CLEANUP_SUMMARY.md  SOFTWARE_ARCHITECTURE.md  SOFTWARE_ARCHITECTURE_UPDATE_SUMMARY.md  SPECIFICATION_HTML_FORM_GENERATION_COMPLETE.md  USER_GUIDE.md  WINDOWS_BUILD_GUIDE.md  WORKSPACE_ORGANIZATION_PHASE2.md
docs/archive/: ALL_TASKS_COMPLETED.md  BUGFIX_SUMMARY.md  BUILD_TEST_VERIFICATION_REPORT.md  CLEANUP_COMPLETE.md  CLEANUP_FINAL_SUMMARY.md  DOCUMENTATION_COMPLETION_INDEX.md  DOCUMENTATION_INDEX.md  FINAL_COMPLETION_REPORT.md  FINAL_SOLUTION_REPORT.md  FINAL_VERIFICATION.txt  INI_BUG_FIXED_SUMMARY.md  INI_CODE_CHANGE_DETAILS.md  INI_DEBUG_GUIDE.md  INI_ISSUE_RESOLVED.md  INI_LOADING_COMPLETION.md  INI_LOADING_FIXED.md  INI_LOADING_PROGRESS.md  INI_PARSING_FIX.md  INI_QUICK_FIX.md  INI_QUICK_REF.md  INI_QUICK_REF_FIX.md  INI_SECTION_PARSING_FIX.md  INTEGRATION_TEST_SUMMARY.md  NEXT_STEPS.md  PHASE_1_2_DELIVERABLES.md  PHASE_2D_COMPLETION_REPORT.md  PHASE_3_4_5_6_IMPLEMENTATION.md  PHASE_3_4_READY_TO_START.md  PUSH_COMPLETE.md  (+26 more)
src/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  configuration_data.cpp  configuration_data.h  error_types.h  form_state.cpp  result.h  schema.cpp  schema.h  schema_loader.cpp  schema_loader.h  schema_validator.cpp  schema_validator.h  validation_error.cpp  validation_error.h
src/core/data/: configuration_data.cpp  configuration_data.h  form_state.h
src/core/io/: configuration_reader.cpp  configuration_reader.h  configuration_writer.cpp  configuration_writer.h  ini_parser.cpp  ini_parser.h  ini_reader.cpp  ini_reader.h  ini_writer.cpp  ini_writer.h  json_reader.h  json_writer.cpp  json_writer.h  yaml_reader.cpp  yaml_reader.h  yaml_writer.h
src/core/models/: format_type.cpp  format_type.h  serialization_context.h  serialization_result.cpp  serialization_result.h
src/core/schema/: schema.cpp  schema.h  schema_loader.cpp  schema_loader.h  schema_validator.cpp  schema_validator.h  validation_error.cpp  validation_error.h
src/core/serializers/: format_serializer.h  ini_serializer.cpp  ini_serializer.h  json_serializer.cpp  json_serializer.h  serializer_factory.cpp  serializer_factory.h
src/html/: CMakeLists.txt  main.cpp
src/html/assets/: index.html
src/html/assets/css/: main.css
src/html/assets/js/: main.js
src/html/handlers/: file_handler.cpp  file_handler.h  request_handler.cpp  request_handler.h  schema_service.cpp  schema_service.h
src/html/server/: http_server.cpp  http_server.h
src/io/: json_reader.cpp  json_reader.h  json_writer.cpp  json_writer.h  yaml_reader.cpp  yaml_reader.h  yaml_writer.cpp  yaml_writer.h
src/qt/: CMakeLists.txt
src/ui/: array_widget.cpp  array_widget.h  dictionary_widget.cpp  dictionary_widget.h  form_generator.cpp  form_generator.h  format_selection_dialog.cpp  format_selection_dialog.h  main_window.cpp  main_window.h  object_array_widget.cpp  object_array_widget.h  path_selector_widget.cpp  path_selector_widget.h  range_widget.cpp  range_widget.h  rule_editor_widget.cpp  rule_editor_widget.h  rule_parser.cpp  rule_parser.h  validation_feedback_widget.cpp  validation_feedback_widget.h  widget_factory.cpp  widget_factory.h
src/utils/: crash_handler.cpp  crash_handler.h  file_utils.cpp  file_utils.h  logger.cpp  logger.h  string_utils.cpp  string_utils.h
src/validators/: enum_validator.cpp  enum_validator.h  ivalidator.h  pattern_validator.cpp  pattern_validator.h  range_validator.cpp  range_validator.h  required_validator.cpp  required_validator.h  type_validator.cpp  type_validator.h
tests/: CMakeLists.txt  test_qt_compatible.cpp
tests/common/: test_fixtures.h
tests/fixtures/: config_complex.json  config_expected.ini  config_simple.json
tests/integration/: CMakeLists.txt  test_ini_save_workflow.cpp  test_json_save_workflow.cpp  test_main_form.cpp  test_main_workflow.cpp  test_workflows.cpp
tests/unit/: CMakeLists.txt  test_json_serializer.cpp
tests/unit/core/: CMakeLists.txt  test_configuration.cpp  test_core_models.cpp  test_ini_parser.cpp  test_json_io.cpp  test_schema_loader.cpp  test_schema_validator.cpp  test_yaml_io.cpp
tests/unit/html/: CMakeLists.txt  test_schema_service.cpp
tests/unit/io/: test_json_reader_writer.cpp  test_yaml_reader_writer.cpp
tests/unit/utils/: test_utilities.cpp
tests/unit/validators/: test_enum_validator.cpp  test_pattern_validator.cpp  test_range_validator.cpp  test_required_validator.cpp  test_type_validator.cpp
tools/: README.md
(+98 files in other folders)
